# Python-Flask-React-Boilerplate

./: .gitignore  pyproject.toml  readme.md
app/: package.json  tailwind.config.js
app/public/: index.html  manifest.json
app/src/: Home.tsx  index.css  index.js  setupProxy.js
backend/: openai_client.py  server.py
scripts/: run_gunicorn.sh
